--- a/src/scss/_structure.scss
+++ b/src/scss/_structure.scss
@@ -55,7 +55,12 @@
 
         scrollbar-width: thin;
 
-        // TODO: Add styles for scrollbar in Chrome
+        // NOTE: This is not working for whatever reason
+        &::-webkit-scrollbar {
+          width: 100%;
+          height: 100%;
+          background: var(--background);
+        }
 
         .partner {
           display: flex;
