--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -31,10 +31,9 @@
 
       form {
         display: flex;
-        align-items: center;
+        flex-direction: column;
         justify-content: center;
-        flex-wrap: wrap;
-        gap: 10px;
+        gap: 20px;
 
         input {
           border: 2px solid transparent;
